src/grammar/Antlr/DecafParser.java
// $ANTLR 3.4 /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g 2011-08-08 16:10:25

  package grammar.Antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class DecafParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "DIGIT", "ID", "LETTER", "MULTI_COMMENT", "NEWLINE", "NUM", "SINGLE_COMMENT", "WHITESPACE", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "';'", "'<'", "'<='", "'=='", "'>'", "'>='", "'Program'", "'['", "']'", "'boolean'", "'char'", "'class'", "'else'", "'false'", "'if'", "'int'", "'return'", "'true'", "'void'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int CHAR=4;
    public static final int DIGIT=5;
    public static final int ID=6;
    public static final int LETTER=7;
    public static final int MULTI_COMMENT=8;
    public static final int NEWLINE=9;
    public static final int NUM=10;
    public static final int SINGLE_COMMENT=11;
    public static final int WHITESPACE=12;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "mType", "char_literal", "relExp", "synpred1_Decaf", 
    "arg1", "bool_literal", "location2", "methodDeclaration", "location1", 
    "program", "blockL", "negadorExp", "eq_op", "parameter", "location", 
    "expressionL", "varDeclaration1", "val", "block", "multiExp", "expression", 
    "int_literal", "suma_op", "rel_op", "declaration", "cond_op", "literal", 
    "varDeclaration", "mul_op", "sumaExp", "arg2", "synpred2_Decaf", "statement", 
    "arg", "methodCall"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, true, false, 
        false, false, false, false, false, false, false, false, false, true, 
        false, false, false
};

private static final int INVALID = 0;

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public DecafParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public DecafParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public DecafParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return DecafParser.tokenNames; }
    public String getGrammarFileName() { return "/media/Contenido/Diego/Dropbox/workspace/Ja-Decaf/src/grammar/Antlr/Decaf.g"; }



    // $ANTLR start "program"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:48:2: program : 'class' 'Program' '{' ( declaration )* '}' ;
    public final void program() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "program");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(48, 1);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:48:9: ( 'class' 'Program' '{' ( declaration )* '}' )
            dbg.enterAlt(1);

            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:48:11: 'class' 'Program' '{' ( declaration )* '}'
            {
            dbg.location(48,11);
            match(input,37,FOLLOW_37_in_program276); if (state.failed) return ;
            dbg.location(48,20);
            match(input,32,FOLLOW_32_in_program279); if (state.failed) return ;
            dbg.location(48,30);
            match(input,46,FOLLOW_46_in_program281); if (state.failed) return ;
            dbg.location(48,34);
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:48:34: ( declaration )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= 35 && LA1_0 <= 36)||LA1_0==41||LA1_0==44) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:48:35: declaration
            	    {
            	    dbg.location(48,35);
            	    pushFollow(FOLLOW_declaration_in_program284);
            	    declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(48,49);
            match(input,48,FOLLOW_48_in_program288); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(48, 54);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "program");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "declaration"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:50:1: declaration : ( varDeclaration | methodDeclaration );
    public final void declaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(50, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:51:3: ( varDeclaration | methodDeclaration )
            int alt2=2;
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            int LA2_0 = input.LA(1);

            if ( ((LA2_0 >= 35 && LA2_0 <= 36)||LA2_0==41||LA2_0==44) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_2 = input.LA(3);

                    if ( (LA2_2==17) ) {
                        alt2=2;
                    }
                    else if ( (LA2_2==26||LA2_2==33) ) {
                        alt2=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:51:6: varDeclaration
                    {
                    dbg.location(51,6);
                    pushFollow(FOLLOW_varDeclaration_in_declaration304);
                    varDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:51:22: methodDeclaration
                    {
                    dbg.location(51,22);
                    pushFollow(FOLLOW_methodDeclaration_in_declaration307);
                    methodDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(51, 40);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaration"



    // $ANTLR start "varDeclaration"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:53:1: varDeclaration : mType ID varDeclaration1 ';' ;
    public final void varDeclaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "varDeclaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(53, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:54:3: ( mType ID varDeclaration1 ';' )
            dbg.enterAlt(1);

            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:54:5: mType ID varDeclaration1 ';'
            {
            dbg.location(54,5);
            pushFollow(FOLLOW_mType_in_varDeclaration322);
            mType();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(54,12);
            match(input,ID,FOLLOW_ID_in_varDeclaration325); if (state.failed) return ;
            dbg.location(54,16);
            pushFollow(FOLLOW_varDeclaration1_in_varDeclaration328);
            varDeclaration1();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(54,32);
            match(input,26,FOLLOW_26_in_varDeclaration330); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(54, 36);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "varDeclaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "varDeclaration"



    // $ANTLR start "varDeclaration1"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:56:1: varDeclaration1 : ( '[' NUM ']' |);
    public final void varDeclaration1() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "varDeclaration1");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(56, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:57:3: ( '[' NUM ']' |)
            int alt3=2;
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==33) ) {
                alt3=1;
            }
            else if ( (LA3_0==26) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:57:6: '[' NUM ']'
                    {
                    dbg.location(57,6);
                    match(input,33,FOLLOW_33_in_varDeclaration1345); if (state.failed) return ;
                    dbg.location(57,10);
                    match(input,NUM,FOLLOW_NUM_in_varDeclaration1347); if (state.failed) return ;
                    dbg.location(57,14);
                    match(input,34,FOLLOW_34_in_varDeclaration1349); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:57:21: 
                    {
                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(57, 20);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "varDeclaration1");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "varDeclaration1"



    // $ANTLR start "methodDeclaration"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:59:1: methodDeclaration : mType ID '(' ( parameter ( ',' parameter )* )* ')' block ;
    public final void methodDeclaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "methodDeclaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(59, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:60:3: ( mType ID '(' ( parameter ( ',' parameter )* )* ')' block )
            dbg.enterAlt(1);

            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:60:5: mType ID '(' ( parameter ( ',' parameter )* )* ')' block
            {
            dbg.location(60,5);
            pushFollow(FOLLOW_mType_in_methodDeclaration365);
            mType();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(60,11);
            match(input,ID,FOLLOW_ID_in_methodDeclaration367); if (state.failed) return ;
            dbg.location(60,14);
            match(input,17,FOLLOW_17_in_methodDeclaration369); if (state.failed) return ;
            dbg.location(60,18);
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:60:18: ( parameter ( ',' parameter )* )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                int LA5_0 = input.LA(1);

                if ( ((LA5_0 >= 35 && LA5_0 <= 36)||LA5_0==41||LA5_0==44) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:60:19: parameter ( ',' parameter )*
            	    {
            	    dbg.location(60,19);
            	    pushFollow(FOLLOW_parameter_in_methodDeclaration372);
            	    parameter();

            	    state._fsp--;
            	    if (state.failed) return ;
            	    dbg.location(60,29);
            	    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:60:29: ( ',' parameter )*
            	    try { dbg.enterSubRule(4);

            	    loop4:
            	    do {
            	        int alt4=2;
            	        try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            	        int LA4_0 = input.LA(1);

            	        if ( (LA4_0==21) ) {
            	            alt4=1;
            	        }


            	        } finally {dbg.exitDecision(4);}

            	        switch (alt4) {
            	    	case 1 :
            	    	    dbg.enterAlt(1);

            	    	    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:60:30: ',' parameter
            	    	    {
            	    	    dbg.location(60,30);
            	    	    match(input,21,FOLLOW_21_in_methodDeclaration375); if (state.failed) return ;
            	    	    dbg.location(60,34);
            	    	    pushFollow(FOLLOW_parameter_in_methodDeclaration377);
            	    	    parameter();

            	    	    state._fsp--;
            	    	    if (state.failed) return ;

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop4;
            	        }
            	    } while (true);
            	    } finally {dbg.exitSubRule(4);}


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}

            dbg.location(60,50);
            match(input,18,FOLLOW_18_in_methodDeclaration385); if (state.failed) return ;
            dbg.location(60,55);
            pushFollow(FOLLOW_block_in_methodDeclaration388);
            block();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(60, 59);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "methodDeclaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "methodDeclaration"



    // $ANTLR start "mType"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:62:1: mType : ( ( 'int' ) | ( 'char' ) | ( 'boolean' ) | ( 'void' ) );
    public final void mType() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "mType");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(62, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:63:3: ( ( 'int' ) | ( 'char' ) | ( 'boolean' ) | ( 'void' ) )
            dbg.enterAlt(1);

            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:
            {
            dbg.location(63,3);
            if ( (input.LA(1) >= 35 && input.LA(1) <= 36)||input.LA(1)==41||input.LA(1)==44 ) {
                input.consume();
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(63, 47);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "mType");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "mType"



    // $ANTLR start "parameter"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:65:1: parameter : mType ID ( '[' ']' )? ;
    public final void parameter() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "parameter");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(65, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:66:3: ( mType ID ( '[' ']' )? )
            dbg.enterAlt(1);

            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:66:6: mType ID ( '[' ']' )?
            {
            dbg.location(66,6);
            pushFollow(FOLLOW_mType_in_parameter437);
            mType();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(66,12);
            match(input,ID,FOLLOW_ID_in_parameter439); if (state.failed) return ;
            dbg.location(66,15);
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:66:15: ( '[' ']' )?
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==33) ) {
                alt6=1;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:66:16: '[' ']'
                    {
                    dbg.location(66,16);
                    match(input,33,FOLLOW_33_in_parameter442); if (state.failed) return ;
                    dbg.location(66,21);
                    match(input,34,FOLLOW_34_in_parameter445); if (state.failed) return ;

                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(66, 25);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "parameter");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "parameter"



    // $ANTLR start "block"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:68:1: block : '{' ( varDeclaration )* ( statement )* '}' ;
    public final void block() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "block");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(68, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:68:7: ( '{' ( varDeclaration )* ( statement )* '}' )
            dbg.enterAlt(1);

            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:68:9: '{' ( varDeclaration )* ( statement )* '}'
            {
            dbg.location(68,9);
            match(input,46,FOLLOW_46_in_block457); if (state.failed) return ;
            dbg.location(68,14);
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:68:14: ( varDeclaration )*
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                int LA7_0 = input.LA(1);

                if ( ((LA7_0 >= 35 && LA7_0 <= 36)||LA7_0==41||LA7_0==44) ) {
                    alt7=1;
                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:68:15: varDeclaration
            	    {
            	    dbg.location(68,15);
            	    pushFollow(FOLLOW_varDeclaration_in_block461);
            	    varDeclaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);
            } finally {dbg.exitSubRule(7);}

            dbg.location(68,33);
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:68:33: ( statement )*
            try { dbg.enterSubRule(8);

            loop8:
            do {
                int alt8=2;
                try { dbg.enterDecision(8, decisionCanBacktrack[8]);

                int LA8_0 = input.LA(1);

                if ( (LA8_0==CHAR||LA8_0==ID||LA8_0==NUM||LA8_0==13||LA8_0==17||LA8_0==22||LA8_0==26||(LA8_0 >= 39 && LA8_0 <= 40)||(LA8_0 >= 42 && LA8_0 <= 43)||(LA8_0 >= 45 && LA8_0 <= 46)) ) {
                    alt8=1;
                }


                } finally {dbg.exitDecision(8);}

                switch (alt8) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:68:34: statement
            	    {
            	    dbg.location(68,34);
            	    pushFollow(FOLLOW_statement_in_block467);
            	    statement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);
            } finally {dbg.exitSubRule(8);}

            dbg.location(68,46);
            match(input,48,FOLLOW_48_in_block471); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(68, 48);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "block");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "block"



    // $ANTLR start "statement"
    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:70:1: statement : ( block | 'if' '(' expression ')' block blockL | 'while' '(' expression ')' block | 'return' expressionL ':' | ( location '=' expression )=> location | expressionL ';' );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(70, 0);

        try {
            // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:71:3: ( block | 'if' '(' expression ')' block blockL | 'while' '(' expression ')' block | 'return' expressionL ':' | ( location '=' expression )=> location | expressionL ';' )
            int alt9=6;
            try { dbg.enterDecision(9, decisionCanBacktrack[9]);

            switch ( input.LA(1) ) {
            case 46:
                {
                alt9=1;
                }
                break;
            case 40:
                {
                alt9=2;
                }
                break;
            case 45:
                {
                alt9=3;
                }
                break;
            case 42:
                {
                alt9=4;
                }
                break;
            case ID:
                {
                int LA9_5 = input.LA(2);

                if ( (synpred1_Decaf()) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 5, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
                }
                break;
            case CHAR:
            case NUM:
            case 13:
            case 17:
            case 22:
            case 26:
            case 39:
            case 43:
                {
                alt9=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:71:5: block
                    {
                    dbg.location(71,5);
                    pushFollow(FOLLOW_block_in_statement481);
                    block();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /media/Contenido/Diego/Dropbox/workspace/Py-Decaf/src/grammar/Decaf.g:72:7: 'if' '(' expression ')' block blockL
                    {
                    dbg.location(72,7);
                    match(input,40,FOLLOW_40_in_statement490); if (state.failed) return ;
                    dbg.location(72,12);
                    match(input,17,FOLLOW_17_in_statement492); if (state.failed) return ;
                    dbg.location(72,16);
                    pushFollow(FOLLOW_expression_in_statement494);
                    expression();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(72,27);
                    match(input,18,FOLLOW_18_in_statement496); if (state.failed) return ;
                    dbg.location(72,31);
                    pushFollow(FOLLOW_block_in_statement498);
                    block();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(72,37);
                    pushFollow(FOLLOW_blockL_in_statement500);
                    blockL();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);
